動画自動再生されない問題の付け焼き刃

--- a/public_bac/handspinner.html
+++ b/public_bac/handspinner.html
@@ -84,11 +84,7 @@
 					</div>
 					<div v-else-if="v_phase === '5_teach_how_to'">
 						<img src="./img/fukidashi_reverse.png" class="spinyart_fukidashi" height="200px" width="500px">
-						<div class="spinyart_talk_chara_big2">
-							今度は点線みたいになったね！<br>これ下の<span class="chara_underlined">条件によって、<br>
-							プログラミング制御</span>されてるんだ！<br><span class="chara_bold">法則を見つけキレイな模様を作ろ</span>
-
-						</div>
+						<div class="spinyart_talk_chara_big2">　今度は点線みたいになったね！<br>　これ下の<span class="chara_underlined">条件によって、<br>　プログラミング制御</span>されてるんだ！<br><span class="chara_bold">　あ法則を見つけキレイな模様を作ろ</span></div>
 					</div>
 				 </div>
 
